<resources>
    <string name="app_name">E2B</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="please_wait">Please wait...</string>
    <string name="error_msg">Some error found. Please try again</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_otp_code">Enter Otp Code</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_address1">Please Enter Address</string>
    <string name="enter_address2">Please Enter Address2</string>
    <string name="signup_welcome_txt">Welcome To Easy To Buy, Please Signup! </string>
    <string name="enter_passcode">Please enter passcode</string>
    <string name="enter_password">Please enter password</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="skip">Skip</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="why_dialog_text">We need to confirm that you are real person.We assure you that we will not share your information and order on behalf of you.</string>
    <string name="resend_text">If you do not receive confirmation code in 2 minutes click here to resend again.</string>
    <string name="no_merchant_text"> No merchant found within your range</string>
    <string name="send_otp_text"> Send OTP</string>
    <string name="place_order_text"> Place Order </string>
    <string name="success_registered_text"> Successfully Registered! :)</string>
    <string name="enter_mobile_number_length">Make  sure you have entered 10 Digits.</string>
    <string name="select_closing_days">Please Select Closing days</string>
    <string name="select_image_option">Please select image option</string>
    <string name="order_amount_hint">Enter Order Amount</string>
    <string name="order_wait_time_hint">Enter Order Wait Time (In Minutes)</string>
    <string name="stopRecordBtn">Stop</string>
    <string name="order_id">OrderID</string>
    <string name="order_status">Order Status</string>
    <string name="order_request">Order Request</string>
    <string name="order_amount">Order Amount</string>
    <string name="wait_time">Wait Time</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="payment_option">Payment Option</string>
    <string name="delivery_option">Delivery Option</string>
    <string name="confirm">Confirm</string>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="take_photo">Take Photo</string>
    <string name="service_not_available">Location service is not available</string>
    <string name="invalid_lat_long_used">Invalid location points</string>
    <string name="no_address_found">Address not found</string>
    <string name="address_found">Address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string-array name="delivery_options">
        <item>Pickup</item>
        <item>Home Delivery</item>
    </string-array>

    <string-array name="payment_options">
        <item>Cash On Delivery</item>
    </string-array>


</resources>
